# fan-ctrl

./: Cargo.toml  build.rs  cross-build.sh
build-deb/DEBIAN/: control  postinst  preinst  prerm
build-deb/etc/systemd/system/: dev-monitor.service
i2c-tools/: README.md  fan-ctrl-stop.sh
i2c-tools/build-deb/DEBIAN/: control  postinst  preinst  prerm
i2c-tools/build-deb/etc/systemd/system/: fan-ctrl.service
include/: Adafruit_EMC2101.h  adc.h  blobstore.h
src/: ADS1X15_TLA2024.cc  adc.cc  aht20.rs  blobstore.cc  emc2101.rs  main.rs
