[package]
name = "dev-monitor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.ruff/cargo/reference/manifest.html

[dependencies]
sysfs_gpio = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crc8 = "0.1.1"
rppal = { version = "0.12.0", features = ["hal"] }
cxx = "1.0"
easy-error = "1.0.0"
clap = { version = "3.0.14", features = ["derive"] }

[build-dependencies]
cxx-build = "1.0"
